--- a/config.toml
+++ b/config.toml
@@ -7,19 +7,18 @@ languagecode = "en"
 defaultcontentlanguage = "en"
 
 paginate = 20
-canonifyurls = true
-
 pygmentsstyle = "b2"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 disqusShortname = "yourdiscussshortname"
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [params]
     author = "Karan Bhatia"
     description = "Karan Bhatia's personal website"
     keywords = "blog,developer,personal"
-    info = "ata Analyst"
+    info = "Aspiring Data Analyst"
     avatarurl = "images/profile.jpg"
     #gravatar = "john.doe@example.com"
     footercontent = "BI & Analytics Intern @ Palo Alto Networks"
