--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [[params.social]]
     name = "Github"
     icon = "fab fa-github"
-    weight = 1
+    weight = 2
     url = "https://github.com/kabhatia7/"
 [[params.social]]
     name = "Twitter"
@@ -74,8 +74,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [[params.social]]
     name = "LinkedIn"
     icon = "fab fa-linkedin"
-    weight = 4
+    weight = 1
     url = "https://www.linkedin.com/in/kabhatia7/"
+[[params.social]]
+    name = "Spotify"
+    icon = "fab fa-spotify"
+    weight = 4
+    url = "https://open.spotify.com/playlist/5DXpf2MvhWs7hSKRnEMV1Y"
 [languages]
     [languages.en]
         languagename = "English"
